savvy-macro/src/snapshots/savvy_macro__tests__assert_snapshot_ffi-3.snap
---
source: savvy-macro/src/lib.rs
assertion_line: 194
expression: lines
---
- "#[allow(clippy::missing_safety_doc)]"
- "#[no_mangle]"
- "pub unsafe extern \"C\" fn savvy_foo__ffi("
- "    x: savvy::ffi::SEXP,"
- "    y: savvy::ffi::SEXP,"
- ") -> savvy::ffi::SEXP {"
- "    match savvy_foo_inner(x, y) {"
- "        Ok(result) => result.0,"
- "        Err(e) => savvy::handle_error(e),"
- "    }"
- "}"
