savvy-macro/src/snapshots/savvy_macro__tests__assert_snapshot_ffi_impl-3.snap
---
source: savvy-macro/src/lib.rs
assertion_line: 227
expression: lines
---
- "#[allow(clippy::missing_safety_doc)]"
- "#[no_mangle]"
- "pub unsafe extern \"C\" fn savvy_Person_name__ffi("
- "    self__: savvy::ffi::SEXP,"
- ") -> savvy::ffi::SEXP {"
- "    match savvy_Person_name_inner(self__) {"
- "        Ok(result) => result.0,"
- "        Err(e) => savvy::handle_error(e),"
- "    }"
- "}"
