savvy-macro/src/snapshots/savvy_macro__tests__assert_snapshot_ffi_impl-4.snap
---
source: savvy-macro/src/lib.rs
assertion_line: 227
expression: lines
---
- "#[allow(clippy::missing_safety_doc)]"
- "#[no_mangle]"
- "pub unsafe extern \"C\" fn savvy_Person_set_name__ffi("
- "    self__: savvy::ffi::SEXP,"
- "    name: savvy::ffi::SEXP,"
- ") -> savvy::ffi::SEXP {"
- "    match savvy_Person_set_name_inner(self__, name) {"
- "        Ok(_) => savvy::sexp::null::null(),"
- "        Err(e) => savvy::handle_error(e),"
- "    }"
- "}"
