savvy-macro/src/snapshots/savvy_macro__tests__assert_snapshot_ffi_impl.snap
---
source: savvy-macro/src/lib.rs
assertion_line: 227
expression: lines
---
- "#[allow(clippy::missing_safety_doc)]"
- "#[no_mangle]"
- "pub unsafe extern \"C\" fn savvy_Person_new__ffi() -> savvy::ffi::SEXP {"
- "    match savvy_Person_new_inner() {"
- "        Ok(result) => {"
- "            match <savvy::Sexp>::try_from(result) {"
- "                Ok(sexp) => sexp.0,"
- "                Err(e) => savvy::handle_error(e),"
- "            }"
- "        }"
- "        Err(e) => savvy::handle_error(e),"
- "    }"
- "}"
